--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* Reset */
+/* RESET */
 * {
 
     padding: 0;
@@ -17,7 +17,7 @@
 header {
     padding: 15px 0;
     background-color: #d8563f;
-    color: #ecf0f1;
+    color: white;
     font-family: "Bungee", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -46,20 +46,91 @@ article img {
     height: 500px;
 }
 
-.articles article {
+#sobre .articles article {
     width: 40%;
 }
 
-article h2 {
+article {
+    font-size: 18px;
+}
+
+h2 {
     font-family: "Bungee", sans-serif;
     font-weight: bold;
     font-style: normal;
     font-size: 27px;
-    color:#d8563f;
+    color: #d8563f;
 }
 
 .articles {
     font-family: helvetica;
+}
+
+/* SECTION CONTATO */
+.metodos {
+    display: flex;
+    justify-content: space-between;
+}
+
+#conato .container {
+    display: block;
+}
+
+#contato .articles div {
+    width: 30%;
+}
+
+h3 {
+    font-family: "Bungee", sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 20px;
+    color: #d8563f;
+}
+
+form input,
+form button,
+form textarea {
+    display: block;
+    width: 320px;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+form input{
+    height: 40px;
+}
+
+form textarea {
+    resize: none;
+    height: 150px;
+    font-family: helvetica;
+}
+
+form button {
+    align-items: center;
+    background-color: #d8563f;
+    color: white;
+    font-family: "Bungee", sans-serif;
+    font-style: normal;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+input:focus,
+textarea:focus {
+    outline-color: #d8563f;
+}
+
+.social img{
+    display: inline;
+    height: 50px;
+    align-items: center;
+    margin-left: 5px;
+}
+
+#endereco {
+    font-family: helvetica;
+    font-size: 18px;
 }
 /* FOOTER */
 footer {
